<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fundo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_slogan"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="18dp"
                android:text="Because You're Worth It."
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_user"
                app:layout_constraintEnd_toEndOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btg_buttom_normal"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/txt_new_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/new_account"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/txt_forgot_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>