<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/newuser" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_slogan"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="18dp"
                android:text="Create new user."
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_firstName"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/firstname"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_lastName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/lastname"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/senha"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/btn_create" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="36dp"
                android:background="@drawable/btg_buttom_normal"
                android:text="@string/criar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>